# backend/internal/catalog/product/product_router.go
@@ -55,5 +55,6 @@ func (r *ProductRouter) MapRoutes(vgroup *gin.RouterGroup) {
 		public.GET("", r.ph.GetAllProducts)
 		public.GET("/:slug", r.ph.GetProductBySlug)
 		public.GET("/:slug/reviews", r.ph.ListProductReviews)
+		public.GET("/:slug/reviews/summary", r.ph.GetProductRatingSummary)
 	}
 }
